--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  	<header>
+  		<nav>
+  			<a href="index.html">
+  				<img src="glacy.logo.svg" width="100" height="50" alt="Логотип магазина Glacy">
+  			</a>
+  			<ul>
+  				<li><a href="catalog.html">Каталог</a></li>
+  				<li><a href="payment.html">Доставка и оплата</a></li>
+  				<li><a href="info.html">О Компании</a></li>
+  			</ul>
+  			 </nav>
+  		<ul>
+  			<li><a href="">Поиск</a></li>
+  			<li><a href="">Вход</a></li>
+  			<li><a href="">Пусто</a></li>
+  		</ul>
+  	</header>
+  	<main>
+  		<div>
+  			<p>
+  				С 10 до 20,еждневно
+  				<span>8 812 450-25-25</span>
+  			</p>
+  			<p><span>Крем-брюле и пламбир с малиновым джемом</span></p>
+  			<form>
+  			<button type="submit">Давайте оба</button>
+  		</form>
+  		</div>
+  	</main>
   </body>
 </html>
