--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
   	<main>
   		<div>
   			<p>
-  				С 10 до 20,еждневно
+  				С 10 до 20,еждневно<br>
   				<span>8 812 450-25-25</span>
   			</p>
-  			<p><span>Крем-брюле и пламбир с малиновым джемом</span></p>
+  			<p><span>Крем-брюле и пломбир<br>
+  			 с малиновым джемом</span></p>
   			<form>
   			<button type="submit">Давайте оба</button>
   		</form>
