--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
   			<button type="submit">Давайте оба</button>
   		</form>
   		</div>
+  		<section>
+  			<h1>Малинка даром!</h1>
+  			<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
+  			<a href="#">Хочу варенье!</a>
+  		</section>
   	</main>
   </body>
 </html>
