--- a/index.html
+++ b/index.html
@@ -36,8 +36,33 @@
   		</div>
   		<section>
   			<h1>Малинка даром!</h1>
-  			<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
+  			<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
   			<a href="#">Хочу варенье!</a>
+  		</section>
+  		<section>
+  			<h1>Шоколадки даром!</h1>
+  			<p>при покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+  			<a href="#">Хочу шоколадки!</a>
+  		</section>
+  		<section>
+  			<ul>
+  				<li>
+  				<p>
+  					<a href="catalog-item.html">
+  					<img src="ice-cream1.jpg" width="200" height="100" alt="Мороженное">
+  				</a>
+  				</p>
+  					<p>
+  					   <a href="catalog-item.html">
+  					   	Сливочное с апельсиновым<br>
+  					   джемом и цитрусовой стружкой.
+  					   </a>
+  					</p>
+  					<p>
+  						<b>310<span>/кг</span></b>
+  					</p>
+  				</li>
+  			</ul>
   		</section>
   	</main>
   </body>
