--- a/index.html
+++ b/index.html
@@ -59,7 +59,55 @@
   					   </a>
   					</p>
   					<p>
-  						<b>310<span>/кг</span></b>
+  						<b>310 Р<span>/кг</span></b>
+  					</p>
+  				</li>
+  				<li>
+  				<p>
+  					<a href="catalog-item.html">
+  					<img src="ice-cream2.jpg" width="200" height="100" alt="Мороженное">
+  				</a>
+  				</p>
+  					<p>
+  					   <a href="catalog-item.html">
+  					   Сливочно-кофейное с кусочками<br>
+  					   шоколода.
+  					   </a>
+  					</p>
+  					<p>
+  						<b>380 Р<span>/кг</span></b>
+  					</p>
+  				 </li>
+  				<li>
+  				<p>
+  					<a href="catalog-item.html">
+  					<img src="ice-cream3.jpg" width="200" height="100" alt="Мороженное">
+  				</a>
+  				</p>
+  					<p>
+  					   <a href="catalog-item.html">
+  					   	Сливочно-клубничное с<br>
+  					   присыпкой из белого шоколада.
+  					   </a>
+  					</p>
+  					<p>
+  						<b>355 Р<span>/кг</span></b>
+  					</p>
+  				</li>
+  				<li>
+  				<p>
+  					<a href="catalog-item.html">
+  					<img src="ice-cream4.jpg" width="200" height="100" alt="Мороженное">
+  				</a>
+  				</p>
+  					<p>
+  					   <a href="catalog-item.html">
+  					   	Сливочный крем-брюле с<br>
+  					   карамельной подливкой.
+  					   </a>
+  					</p>
+  					<p>
+  						<b>415 Р<span>/кг</span></b>
   					</p>
   				</li>
   			</ul>
