--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
   	<header>
-  		<nav>
-  			<a href="index.html">
+  			<a>
   				<img src="glacy.logo.svg" width="100" height="50" alt="Логотип магазина Glacy">
   			</a>
+        <nav>
   			<ul>
   				<li><a href="catalog.html">Каталог</a></li>
   				<li><a href="payment.html">Доставка и оплата</a></li>
@@ -30,28 +30,24 @@
   			</p>
   			<p><span>Крем-брюле и пломбир<br>
   			 с малиновым джемом</span></p>
-  			<form>
-  			<button type="submit">Давайте оба</button>
-  		</form>
+  		<a href="">Давайте оба!</a>
   		</div>
   		<section>
-  			<h1>Малинка даром!</h1>
+  			<h2>Малинка даром!</h2>
   			<p>При покупке 2кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
   			<a href="#">Хочу варенье!</a>
   		</section>
   		<section>
-  			<h1>Шоколадки даром!</h1>
+  			<h2>Шоколадки даром!</h2>
   			<p>при покупке 2кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
   			<a href="#">Хочу шоколадки!</a>
   		</section>
   		<section>
   			<ul>
   				<li>
-  				<p>
   					<a href="catalog-item.html">
   					<img src="ice-cream1.jpg" width="200" height="100" alt="Мороженное">
   				</a>
-  				</p>
   					<p>
   					   <a href="catalog-item.html">
   					   	Сливочное с апельсиновым<br>
@@ -63,11 +59,9 @@
   					</p>
   				</li>
   				<li>
-  				<p>
   					<a href="catalog-item.html">
   					<img src="ice-cream2.jpg" width="200" height="100" alt="Мороженное">
   				</a>
-  				</p>
   					<p>
   					   <a href="catalog-item.html">
   					   Сливочно-кофейное с кусочками<br>
@@ -79,11 +73,9 @@
   					</p>
   				 </li>
   				<li>
-  				<p>
   					<a href="catalog-item.html">
   					<img src="ice-cream3.jpg" width="200" height="100" alt="Мороженное">
   				</a>
-  				</p>
   					<p>
   					   <a href="catalog-item.html">
   					   	Сливочно-клубничное с<br>
@@ -95,11 +87,9 @@
   					</p>
   				</li>
   				<li>
-  				<p>
   					<a href="catalog-item.html">
   					<img src="ice-cream4.jpg" width="200" height="100" alt="Мороженное">
   				</a>
-  				</p>
   					<p>
   					   <a href="catalog-item.html">
   					   	Сливочный крем-брюле с<br>
@@ -112,6 +102,67 @@
   				</li>
   			</ul>
   		</section>
+     <section>
+       <p>
+         Магазин Глэйси-это онлайн- и офлайн магазин по продаде мороженого собственного производства и на развес
+       </p>
+       <div>
+         <p>
+           Все наше мороженое изготавливается на собственном производсте, с использованием современного оборудования и проверенных временем технологий.
+         </p>
+       </div>
+       <div>
+         <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+       </div>
+       <div>
+         <p>Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</p>
+       </div>
+       <div>
+         <p>Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+       </div>
+     </section>
+     <article>
+       <h3>Новое о нашем блоге</h3>
+       <p><a href="">10 способов сервировки фруктовых щербетов к столу</a></p>
+     </article>
+     <article>
+       <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+       <form>
+         <input type="search" placeholder="email@example.com" name="searching">
+         <button  type="submit">Отправить</button> 
+       </form>
+     </article>
   	</main>
+    <footer>
+      <div>
+        <p>
+          Адрес главного офиса<br> и офлайн-магазина
+          <b>Ул.Большая Конюшенная<br>
+          19/8,Санкт-Петербург</b>
+        </p>
+        <p>Для заказов по телефону:<br>
+        8 812 450-25-25<br>
+      (с 10 до 20 ежедневно)</p>
+      <a href="">Форма обратной связи</a>
+      </div>
+      <div>
+        <ul>
+          <li><a href="twitter.com">Твиттер</a></li>
+          <li><a href="instagram.com">Инстаграм</a></li>
+          <li><a href="facebook.com">Фэйсбук</a></li>
+          <li><a href="vkontakte.ru">Вконтакте</a></li>
+        </ul>
+        <ul>
+          <li><a href="">Для поставщиков</a></li>
+          <li><a href="">О производстве</a></li>
+        </ul>
+           <ul>
+          <li><a href="">Наши документы</a></li>
+          <li><a href="">Экологические стандарты</a></li>
+        </ul>
+        <img src="html-academy.svg" width="40" height="15" alt="HTML-Academy">
+        <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a>  2019</p>
+      </div>
+    </footer>
   </body>
 </html>
