--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   	<main>
   		<div>
   			<p>
-  				С 10 до 20,еждневно<br>
+  				С 10 до 20,еждневно
   				<span>8 812 450-25-25</span>
   			</p>
   			<p><span>Крем-брюле и пломбир<br>
@@ -50,7 +50,7 @@
   				</a>
   					<p>
   					   <a href="catalog-item.html">
-  					   	Сливочное с апельсиновым<br>
+  					   	Сливочное с апельсиновым
   					   джемом и цитрусовой стружкой.
   					   </a>
   					</p>
@@ -78,7 +78,7 @@
   				</a>
   					<p>
   					   <a href="catalog-item.html">
-  					   	Сливочно-клубничное с<br>
+  					   	Сливочно-клубничное с
   					   присыпкой из белого шоколада.
   					   </a>
   					</p>
@@ -92,7 +92,7 @@
   				</a>
   					<p>
   					   <a href="catalog-item.html">
-  					   	Сливочный крем-брюле с<br>
+  					   	Сливочный крем-брюле с
   					   карамельной подливкой.
   					   </a>
   					</p>
@@ -106,45 +106,45 @@
        <p>
          Магазин Глэйси-это онлайн- и офлайн магазин по продаде мороженого собственного производства и на развес
        </p>
-       <div>
-         <p>
+       <ul>
+         <li>
            Все наше мороженое изготавливается на собственном производсте, с использованием современного оборудования и проверенных временем технологий.
-         </p>
-       </div>
-       <div>
-         <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-       </div>
-       <div>
-         <p>Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</p>
-       </div>
-       <div>
-         <p>Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-       </div>
+         </li>
+      <li>
+         Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+       </li>
+       <li>Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+         <li>Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+      </ul>
      </section>
-     <article>
+     <section>
        <h3>Новое о нашем блоге</h3>
        <p><a href="">10 способов сервировки фруктовых щербетов к столу</a></p>
-     </article>
+     </section>
      <article>
        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-       <form>
+       <form action="#" method="get">
          <input type="search" placeholder="email@example.com" name="searching">
          <button  type="submit">Отправить</button> 
        </form>
      </article>
-  	</main>
-    <footer>
-      <div>
+     <article>
+      <div class="map">
+      <img src="map.png" width="800" height="300" alt="карта">
+      <img src="point.svg" width="30" height="50" alt="Местонахождение">
+      </div>
         <p>
-          Адрес главного офиса<br> и офлайн-магазина
-          <b>Ул.Большая Конюшенная<br>
+          Адрес главного офиса и офлайн-магазина
+          <b>Ул.Большая Конюшенная
           19/8,Санкт-Петербург</b>
         </p>
         <p>Для заказов по телефону:<br>
         8 812 450-25-25<br>
       (с 10 до 20 ежедневно)</p>
       <a href="">Форма обратной связи</a>
-      </div>
+      </article>
+  	</main>
+    <footer>
       <div>
         <ul>
           <li><a href="twitter.com">Твиттер</a></li>
@@ -154,9 +154,7 @@
         </ul>
         <ul>
           <li><a href="">Для поставщиков</a></li>
-          <li><a href="">О производстве</a></li>
-        </ul>
-           <ul>
+          <li><a href="">О производстве</a></li>       
           <li><a href="">Наши документы</a></li>
           <li><a href="">Экологические стандарты</a></li>
         </ul>
