--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   			</a>
         <nav>
   			<ul>
-  				<li><a href="catalog.html">Каталог</a></li>
+  				<li><a href="#">Каталог</a></li>
   				<li><a href="payment.html">Доставка и оплата</a></li>
   				<li><a href="info.html">О Компании</a></li>
   			</ul>
@@ -24,14 +24,14 @@
   	</header>
   	<nav>
   			<ul>
-  			<li><a href="#">Главная</a></li>
+  			<li><a href="index.html">Главная</a></li>
   			<li><a href="#">Каталог</a></li>
   			<li>Сливочное</li>
   		</ul>
   		</nav>
   	<main>
   		<h1>Сливочное мороженое</h1>
-  		<section>
+  		<!--<section>
   			<ul>
   				<li>Сортировка:</li>
           <ul>
@@ -50,7 +50,7 @@
                 <li><a href="#">Выше 30%</a></li>
            </ul>
          </ul>
-  		</section>
+  		</section> -->
       <section>
         <ul>
           <li>Наполнители:</li>
@@ -86,7 +86,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-               Сливочно-кофейное с кусочками<br>
+               Сливочно-кофейное с кусочками
                шоколода.
                </a>
             </p>
@@ -100,7 +100,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-                Сливочно-клубничное с<br>
+                Сливочно-клубничное с
                присыпкой из белого шоколада.
                </a>
             </p>
@@ -114,7 +114,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-                Сливочный крем-брюле с<br>
+                Сливочный крем-брюле с
                карамельной подливкой.
                </a>
             </p>
@@ -128,7 +128,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-               Сливочное с брусничным<br>
+               Сливочное с брусничным
                джемом.
                </a>
             </p>
@@ -142,7 +142,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-               Сливочно-черничное с цельными<br>
+               Сливочно-черничное с цельными
                ягодами черники.
                </a>
             </p>
@@ -156,7 +156,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-                Сливочно-лимонное с<br>
+                Сливочно-лимонное с
                карамельной присыпкой.
                </a>
             </p>
@@ -170,7 +170,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-                Сливочное с шоколадной<br>
+                Сливочное с шоколадной
                стружкой.
                </a>
             </p>
@@ -184,7 +184,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-                Сливочное-ванильное с<br>
+                Сливочное-ванильное с
                кусочками шоколада.
                </a>
             </p>
@@ -198,7 +198,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-               Сливочное с ментоловым<br>
+               Сливочное с ментоловым
                сиропом.
                </a>
             </p>
@@ -212,7 +212,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-               Сливочное с кусочками черного<br>
+               Сливочное с кусочками черного
                шоколада.
                </a>
             </p>
@@ -234,11 +234,13 @@
             </p>
           </li>
           <ul>
+            <li><a href="#">Вперед</a></li>
             <li><a href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
             <li><a href="#">5</a></li>
+            <li><a href="#">Назад</a></li>
           </ul>
       </section>
   	</main>
@@ -253,8 +255,6 @@
         <ul>
           <li><a href="">Для поставщиков</a></li>
           <li><a href="">О производстве</a></li>
-        </ul>
-           <ul>
           <li><a href="">Наши документы</a></li>
           <li><a href="">Экологические стандарты</a></li>
         </ul>
