--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   	<header>
-  			<a>
+  			<a href="index.html">
   				<img src="glacy.logo.svg" width="100" height="50" alt="Логотип магазина Glacy">
   			</a>
         <nav>
@@ -72,7 +72,7 @@
           </a>
             <p>
                <a href="catalog-item.html">
-                Сливочное с апельсиновым<br>
+                Сливочное с апельсиновым
                джемом и цитрусовой стружкой.
                </a>
             </p>
