--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
   		<div>
   			<p>
   				С 10 до 20,еждневно
-  				<span>8 812 450-25-25</span>
+  				<span><a href="#"8 812 450-25-25></a></span>
   			</p>
-  			<p><span>Крем-брюле и пломбир<br>
+  			<p><span>Крем-брюле и пломбир
   			 с малиновым джемом</span></p>
   		<a href="">Давайте оба!</a>
+      <form action="#">
+        <input type="radio" name="Slide" value="slide1">
+        <input type="radio" name="Slide" value="slide2">
+        <input type="radio" name="Slide" value="slide3">
+      </form>
   		</div>
   		<section>
   			<h2>Малинка даром!</h2>
@@ -131,15 +136,14 @@
      <article>
       <div class="map">
       <img src="map.png" width="800" height="300" alt="карта">
-      <img src="point.svg" width="30" height="50" alt="Местонахождение">
       </div>
         <p>
           Адрес главного офиса и офлайн-магазина
           <b>Ул.Большая Конюшенная
           19/8,Санкт-Петербург</b>
         </p>
-        <p>Для заказов по телефону:<br>
-        8 812 450-25-25<br>
+        <p>Для заказов по телефону:
+        8 812 450-25-25
       (с 10 до 20 ежедневно)</p>
       <a href="">Форма обратной связи</a>
       </article>
