--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
     <div>
       <p>
         С 10 до 20,еждневно
-        <span><a href="#" 8 812 450-25-25></a></span>
+        <a href="tel:88124502525">8 812 450-25-25</a>
       </p>
-      <p><span>Крем-брюле и пломбир
-          с малиновым джемом</span></p>
-      <a href="">Давайте оба!</a>
-      <form action="#">
+      <ul>
+        <li>
+      <p>Крем-брюле и пломбир
+          с малиновым джемом</p>
+      <a href="#">Давайте оба!</a>
+    </li>
+      </ul>
+    <!-- <form action="#">
         <input type="radio" name="Slide" value="slide1">
         <input type="radio" name="Slide" value="slide2">
         <input type="radio" name="Slide" value="slide3">
-      </form>
+      </form> -->
     </div>
     <section>
       <h2>Малинка даром!</h2>
@@ -145,7 +149,7 @@
           19/8,Санкт-Петербург</b>
       </p>
       <p>Для заказов по телефону:
-        8 812 450-25-25
+       <a href="tel:88124502525">8 812 450-25-25</a>
         (с 10 до 20 ежедневно)</p>
       <a href="">Форма обратной связи</a>
     </article>
