--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
           с малиновым джемом</p>
       <a href="#">Давайте оба!</a>
     </li>
+          <li>
+      <p>Шоколадный пломбир и лимонный сорбет</p>
+      <a href="#">Давайте оба!</a>
+    </li>
+          <li>
+      <p>пломбир с помадкой и клубничный щербет</p>
+      <a href="#">Давайте оба!</a>
+    </li>
       </ul>
     <!-- <form action="#">
         <input type="radio" name="Slide" value="slide1">
