--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="glacy.logo.svg" width="100" height="50" alt="Логотип магазина Glacy">
+      <img src="../1155433-gllacy-26/img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
     </a>
     <nav>
       <ul>
@@ -19,11 +19,15 @@
       </ul>
     </nav>
     <ul>
-      <li><a href="">Поиск</a></li>
-      <li><a href="">Вход</a></li>
-      <li><a href="">2 товара</a></li>
+      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/loupe.svg" width="20" height="20" alt="Лупа">Поиск</a></li>
+      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/entrance.svg" width="20" height="20" alt="Иконка входа">Вход</a></li>
+      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/basket.svg" width="20" height="20" alt="Корзина">2 товара</a></li>
     </ul>
   </header>
+  <p>
+        С 10 до 20,еждневно
+        <a href="tel:88124502525">8 812 450-25-25</a>
+      </p>
   <nav>
     <ul>
       <li><a href="index.html">Главная</a></li>
@@ -50,7 +54,7 @@
       <ul>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream1.jpg" width="200" height="100" alt="Мороженное">
+           <img src="../1155433-gllacy-26/img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -64,8 +68,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream2.jpg" width="200" height="100" alt="Мороженное">
-          </a>
+            <img src="../1155433-gllacy-26/img/ice-cream/2.png" width="267" height="267" alt="Мороженное">
           <p>
             <a href="catalog-item.html">
               Сливочно-кофейное с кусочками
@@ -78,7 +81,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream3.jpg" width="200" height="100" alt="Мороженное">
+            <img src="../1155433-gllacy-26/img/ice-cream/3.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -92,7 +95,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream4.jpg" width="200" height="100" alt="Мороженное">
+            <img src="../1155433-gllacy-26/img/ice-cream/4.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -106,7 +109,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream5.jpg" width="200" height="100" alt="Мороженое">
+           <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -120,7 +123,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream6.jpg" width="200" height="100" alt="Мороженое">
+           <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/2.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -134,7 +137,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream7.jpg" width="200" height="100" alt="Мороженное">
+          <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/3.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -148,7 +151,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream8.jpg" width="200" height="100" alt="Мороженое">
+           <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/4.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -162,7 +165,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream9.jpg" width="200" height="100" alt="Мороженое">
+           <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -176,7 +179,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream10.jpg" width="200" height="100" alt="Мороженое">
+           <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/2.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -190,7 +193,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream11.jpg" width="200" height="100" alt="Мороженое">
+           <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/3.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -204,7 +207,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream12.jpg" width="200" height="100" alt="Мороженое">
+         <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/4.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -229,18 +232,18 @@
   <footer>
     <div>
       <ul>
-        <li><a href="twitter.com">Твиттер</a></li>
-        <li><a href="instagram.com">Инстаграм</a></li>
-        <li><a href="facebook.com">Фэйсбук</a></li>
-        <li><a href="vkontakte.ru">Вконтакте</a></li>
+        <li><a href="twitter.com"><img src="../1155433-gllacy-26/img/svg-gllacy/twitter.svg" width="40" height="40" alt="Icon">Твиттер</a></li>
+        <li><a href="instagram.com"><img src="../1155433-gllacy-26/img/svg-gllacy/instagram.svg" width="40" height="40" alt="Icon">Инстаграм</a></li>
+        <li><a href="facebook.com"><img src="../1155433-gllacy-26/img/svg-gllacy/fb.svg" width="40" height="40" alt="Icon">Фэйсбук</a></li>
+        <li><a href="vkontakte.ru"><img src="../1155433-gllacy-26/img/svg-gllacy/vk.svg" width="40" height="40" alt="Icon">Вконтакте</a></li>
       </ul>
       <ul>
-        <li><a href="">Для поставщиков</a></li>
-        <li><a href="">О производстве</a></li>
-        <li><a href="">Наши документы</a></li>
-        <li><a href="">Экологические стандарты</a></li>
+        <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/heart.svg" width="15" height="13" alt="Сердечко">Для поставщиков</a></li>
+        <li><a href="#">О производстве</a></li>
+        <li><a href="#">Наши документы</a></li>
+        <li><a href="#">Экологические стандарты</a></li>
       </ul>
-      <img src="html-academy.svg" width="40" height="15" alt="HTML-Academy">
+      <a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
       <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
     </div>
   </footer>
