--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a>
-      <img src="glacy.logo.svg" width="100" height="50" alt="Логотип магазина Glacy">
+      <img src="../1155433-gllacy-26/img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
     </a>
     <nav>
       <ul>
@@ -19,9 +19,9 @@
       </ul>
     </nav>
     <ul>
-      <li><a href="">Поиск</a></li>
-      <li><a href="">Вход</a></li>
-      <li><a href="">Пусто</a></li>
+      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/loupe.svg" width="20" height="20" alt="Лупа">Поиск</a></li>
+      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/entrance.svg" width="20" height="20" alt="Иконка входа">Вход</a></li>
+      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/basket.svg" width="20" height="20" alt="Корзина">Пусто</a></li>
     </ul>
   </header>
   <main>
@@ -32,20 +32,20 @@
       </p>
       <ul>
         <li>
-      <p>Крем-брюле и пломбир
-          с малиновым джемом</p>
-      <a href="#">Давайте оба!</a>
-    </li>
-          <li>
-      <p>Шоколадный пломбир и лимонный сорбет</p>
-      <a href="#">Давайте оба!</a>
-    </li>
-          <li>
-      <p>пломбир с помадкой и клубничный щербет</p>
-      <a href="#">Давайте оба!</a>
-    </li>
+          <p>Крем-брюле и пломбир
+            с малиновым джемом</p>
+          <a href="#">Давайте оба!</a>
+        </li>
+        <li>
+          <p>Шоколадный пломбир и лимонный сорбет</p>
+          <a href="#">Давайте оба!</a>
+        </li>
+        <li>
+          <p>пломбир с помадкой и клубничный щербет</p>
+          <a href="#">Давайте оба!</a>
+        </li>
       </ul>
-    <!-- <form action="#">
+      <!-- <form action="#">
         <input type="radio" name="Slide" value="slide1">
         <input type="radio" name="Slide" value="slide2">
         <input type="radio" name="Slide" value="slide3">
@@ -126,14 +126,15 @@
         Магазин Глэйси-это онлайн- и офлайн магазин по продаде мороженого собственного производства и на развес
       </p>
       <ul>
-        <li>
+        <li><img src="../1155433-gllacy-26/img/svg-gllacy/ice-cream.svg" width="50" height="50" alt="Мороженко">
           Все наше мороженое изготавливается на собственном производсте, с использованием современного оборудования и проверенных временем технологий.
         </li>
         <li>
+          <img src="../1155433-gllacy-26/img/svg-gllacy/cow.svg" width="50" height="50" alt="Корова">
           Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
         </li>
-        <li>Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
-        <li>Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+        <li><img src="../1155433-gllacy-26/img/svg-gllacy/eco.svg" width="50" height="50" alt="Листик">Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+        <li><img src="../1155433-gllacy-26/img/svg-gllacy/thermometer.svg" width="50" height="50" alt="Градусник">Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
       </ul>
     </section>
     <section>
@@ -157,7 +158,7 @@
           19/8,Санкт-Петербург</b>
       </p>
       <p>Для заказов по телефону:
-       <a href="tel:88124502525">8 812 450-25-25</a>
+        <a href="tel:88124502525">8 812 450-25-25</a>
         (с 10 до 20 ежедневно)</p>
       <a href="">Форма обратной связи</a>
     </article>
@@ -165,18 +166,18 @@
   <footer>
     <div>
       <ul>
-        <li><a href="twitter.com">Твиттер</a></li>
-        <li><a href="instagram.com">Инстаграм</a></li>
-        <li><a href="facebook.com">Фэйсбук</a></li>
-        <li><a href="vkontakte.ru">Вконтакте</a></li>
+        <li><a href="twitter.com"><img src="../1155433-gllacy-26/img/svg-gllacy/twitter.svg" width="40" height="40" alt="Icon">Твиттер</a></li>
+        <li><a href="instagram.com"><img src="../1155433-gllacy-26/img/svg-gllacy/instagram.svg" width="40" height="40" alt="Icon">Инстаграм</a></li>
+        <li><a href="facebook.com"><img src="../1155433-gllacy-26/img/svg-gllacy/fb.svg" width="40" height="40" alt="Icon">Фэйсбук</a></li>
+        <li><a href="vkontakte.ru"><img src="../1155433-gllacy-26/img/svg-gllacy/vk.svg" width="40" height="40" alt="Icon">Вконтакте</a></li>
       </ul>
       <ul>
-        <li><a href="">Для поставщиков</a></li>
-        <li><a href="">О производстве</a></li>
-        <li><a href="">Наши документы</a></li>
-        <li><a href="">Экологические стандарты</a></li>
+        <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/heart.svg" width="15" height="13" alt="Сердечко">Для поставщиков</a></li>
+        <li><a href="#">О производстве</a></li>
+        <li><a href="#">Наши документы</a></li>
+        <li><a href="#">Экологические стандарты</a></li>
       </ul>
-      <img src="html-academy.svg" width="40" height="15" alt="HTML-Academy">
+      <a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
       <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
     </div>
   </footer>
