--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="../1155433-gllacy-26/img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
+      <img src="img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
     </a>
     <nav>
       <ul>
@@ -19,9 +19,9 @@
       </ul>
     </nav>
     <ul>
-      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/loupe.svg" width="20" height="20" alt="Лупа">Поиск</a></li>
-      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/entrance.svg" width="20" height="20" alt="Иконка входа">Вход</a></li>
-      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/basket.svg" width="20" height="20" alt="Корзина">2 товара</a></li>
+      <li><a href="#">Поиск</a></li>
+      <li><a href="#">Вход</a></li>
+      <li><a href="#">2 товара</a></li>
     </ul>
   </header>
   <p>
@@ -54,7 +54,7 @@
       <ul>
         <li>
           <a href="catalog-item.html">
-           <img src="../1155433-gllacy-26/img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -68,7 +68,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="../1155433-gllacy-26/img/ice-cream/2.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/2.png" width="267" height="267" alt="Мороженное">
           <p>
             <a href="catalog-item.html">
               Сливочно-кофейное с кусочками
@@ -81,7 +81,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="../1155433-gllacy-26/img/ice-cream/3.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/3.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -95,7 +95,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="../1155433-gllacy-26/img/ice-cream/4.png" width="267" height="267" alt="Мороженное">
+            <img src="img/ice-cream/4.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -109,7 +109,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/1.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/2 ряд/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -123,7 +123,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/2.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/2 ряд/2.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -137,7 +137,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-          <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/3.png" width="267" height="267" alt="Мороженное">
+          <img src="img/ice-cream/2 ряд/3.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -151,7 +151,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="../1155433-gllacy-26/img/ice-cream/2 ряд/4.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/2 ряд/4.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -165,7 +165,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/1.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/3 ряд/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -179,7 +179,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/2.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/3 ряд/2.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -193,7 +193,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-           <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/3.png" width="267" height="267" alt="Мороженное">
+           <img src="img/ice-cream/3 ряд/3.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -207,7 +207,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-         <img src="../1155433-gllacy-26/img/ice-cream/3 ряд/4.png" width="267" height="267" alt="Мороженное">
+         <img src="img/ice-cream/3 ряд/4.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -232,18 +232,18 @@
   <footer>
     <div>
       <ul>
-        <li><a href="twitter.com"><img src="../1155433-gllacy-26/img/svg-gllacy/twitter.svg" width="40" height="40" alt="Icon">Твиттер</a></li>
-        <li><a href="instagram.com"><img src="../1155433-gllacy-26/img/svg-gllacy/instagram.svg" width="40" height="40" alt="Icon">Инстаграм</a></li>
-        <li><a href="facebook.com"><img src="../1155433-gllacy-26/img/svg-gllacy/fb.svg" width="40" height="40" alt="Icon">Фэйсбук</a></li>
-        <li><a href="vkontakte.ru"><img src="../1155433-gllacy-26/img/svg-gllacy/vk.svg" width="40" height="40" alt="Icon">Вконтакте</a></li>
+        <li><a href="twitter.com">Твиттер</a></li>
+        <li><a href="instagram.com">Инстаграм</a></li>
+        <li><a href="facebook.com">Фэйсбук</a></li>
+        <li><a href="vkontakte.ru">Вконтакте</a></li>
       </ul>
       <ul>
-        <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/heart.svg" width="15" height="13" alt="Сердечко">Для поставщиков</a></li>
+        <li><a href="#">Для поставщиков</a></li>
         <li><a href="#">О производстве</a></li>
         <li><a href="#">Наши документы</a></li>
         <li><a href="#">Экологические стандарты</a></li>
       </ul>
-      <a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
+      <a href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
       <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
     </div>
   </footer>
