--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a>
-      <img src="../1155433-gllacy-26/img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
+      <img src="img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
     </a>
     <nav>
       <ul>
@@ -19,9 +19,9 @@
       </ul>
     </nav>
     <ul>
-      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/loupe.svg" width="20" height="20" alt="Лупа">Поиск</a></li>
-      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/entrance.svg" width="20" height="20" alt="Иконка входа">Вход</a></li>
-      <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/basket.svg" width="20" height="20" alt="Корзина">Пусто</a></li>
+      <li><a href="#">Поиск</a></li>
+      <li><a href="#">Вход</a></li>
+      <li><a href="#">Пусто</a></li>
     </ul>
   </header>
   <main>
@@ -65,7 +65,7 @@
       <ul>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream1.jpg" width="200" height="100" alt="Мороженное">
+             <img src="img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -79,7 +79,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream2.jpg" width="200" height="100" alt="Мороженное">
+            <img src="img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -93,7 +93,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream3.jpg" width="200" height="100" alt="Мороженное">
+            <img src="img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -107,7 +107,7 @@
         </li>
         <li>
           <a href="catalog-item.html">
-            <img src="ice-cream4.jpg" width="200" height="100" alt="Мороженное">
+            <img src="img/ice-cream/1.png" width="267" height="267" alt="Мороженное">
           </a>
           <p>
             <a href="catalog-item.html">
@@ -126,15 +126,15 @@
         Магазин Глэйси-это онлайн- и офлайн магазин по продаде мороженого собственного производства и на развес
       </p>
       <ul>
-        <li><img src="../1155433-gllacy-26/img/svg-gllacy/ice-cream.svg" width="50" height="50" alt="Мороженко">
+        <li>
           Все наше мороженое изготавливается на собственном производсте, с использованием современного оборудования и проверенных временем технологий.
         </li>
         <li>
-          <img src="../1155433-gllacy-26/img/svg-gllacy/cow.svg" width="50" height="50" alt="Корова">
+          
           Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
         </li>
-        <li><img src="../1155433-gllacy-26/img/svg-gllacy/eco.svg" width="50" height="50" alt="Листик">Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
-        <li><img src="../1155433-gllacy-26/img/svg-gllacy/thermometer.svg" width="50" height="50" alt="Градусник">Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+        <li>Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+        <li>Доставка нашего мороженого до заказчиков осуществляется в специальном темопаке.который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
       </ul>
     </section>
     <section>
@@ -163,21 +163,21 @@
       <a href="">Форма обратной связи</a>
     </article>
   </main>
-  <footer>
+   <footer>
     <div>
       <ul>
-        <li><a href="twitter.com"><img src="../1155433-gllacy-26/img/svg-gllacy/twitter.svg" width="40" height="40" alt="Icon">Твиттер</a></li>
-        <li><a href="instagram.com"><img src="../1155433-gllacy-26/img/svg-gllacy/instagram.svg" width="40" height="40" alt="Icon">Инстаграм</a></li>
-        <li><a href="facebook.com"><img src="../1155433-gllacy-26/img/svg-gllacy/fb.svg" width="40" height="40" alt="Icon">Фэйсбук</a></li>
-        <li><a href="vkontakte.ru"><img src="../1155433-gllacy-26/img/svg-gllacy/vk.svg" width="40" height="40" alt="Icon">Вконтакте</a></li>
+        <li><a href="twitter.com">Твиттер</a></li>
+        <li><a href="instagram.com">Инстаграм</a></li>
+        <li><a href="facebook.com">Фэйсбук</a></li>
+        <li><a href="vkontakte.ru">Вконтакте</a></li>
       </ul>
       <ul>
-        <li><a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/heart.svg" width="15" height="13" alt="Сердечко">Для поставщиков</a></li>
+        <li><a href="#">Для поставщиков</a></li>
         <li><a href="#">О производстве</a></li>
         <li><a href="#">Наши документы</a></li>
         <li><a href="#">Экологические стандарты</a></li>
       </ul>
-      <a href="#"><img src="../1155433-gllacy-26/img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
+      <a href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
       <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
     </div>
   </footer>
