--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <header>
-    <a>
+    <a href="#">
       <img src="img/svg-gllacy/logo.svg" width="156" height="67" alt="Логотип магазина Glacy">
     </a>
     <nav>
@@ -32,15 +32,18 @@
       </p>
       <ul>
         <li>
+          <img src="img/ice-cream/Слайды/Мороженко 1.png" width="640" height="585" alt="Слайд 1">
           <p>Крем-брюле и пломбир
             с малиновым джемом</p>
           <a href="#">Давайте оба!</a>
         </li>
         <li>
+           <img src="img/ice-cream/Слайды/Мороженко 2.png" width="640" height="585" alt="Слайд 2">
           <p>Шоколадный пломбир и лимонный сорбет</p>
           <a href="#">Давайте оба!</a>
         </li>
         <li>
+           <img src="img/ice-cream/Слайды/Мороженко 3.png" width="640" height="585" alt="Слайд 3">
           <p>пломбир с помадкой и клубничный щербет</p>
           <a href="#">Давайте оба!</a>
         </li>
