--- a/catalog.html
+++ b/catalog.html
@@ -243,7 +243,7 @@
         <li><a href="#">Наши документы</a></li>
         <li><a href="#">Экологические стандарты</a></li>
       </ul>
-      <a href="#"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
+      <a href="index.html"><img src="img/svg-gllacy/logo-htmlacademy.svg" width="109" height="40" alt="HTML-Academy"></a>
       <p>Сделанно в <a href="https://htmlacademy.ru/">HTML Academy</a> 2019</p>
     </div>
   </footer>
